// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with default props 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "expanded": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
        theme={
          Object {
            "colors": Object {
              "background": "#FFF",
              "backgroundLayout": "rgba(0, 0, 0, 0.8)",
              "black": "#000",
              "error": "#B00020",
              "greyOpac10": "rgba(53, 53, 53, 0.1)",
              "greyOpac50": "rgba(53, 53, 53, 0.5)",
              "lightgrey": "#D7D7D7",
              "linkColor": "#0000EE",
              "primary": "#FAD000",
              "primaryVariant": "#3700B3",
              "secondary": "#03DAC6",
              "secondaryVariant": "#018786",
              "shadowColor": "#222",
              "textColor": "#000",
              "transparent": "transparent",
              "white": "#FFF",
            },
            "dark": false,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "Mulish-Bold",
                  "fontSize": 21.13142857142857,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#000",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  undefined,
                ],
              ]
            }
            theme={
              Object {
                "colors": Object {
                  "background": "#FFF",
                  "backgroundLayout": "rgba(0, 0, 0, 0.8)",
                  "black": "#000",
                  "error": "#B00020",
                  "greyOpac10": "rgba(53, 53, 53, 0.1)",
                  "greyOpac50": "rgba(53, 53, 53, 0.5)",
                  "lightgrey": "#D7D7D7",
                  "linkColor": "#0000EE",
                  "primary": "#FAD000",
                  "primaryVariant": "#3700B3",
                  "secondary": "#03DAC6",
                  "secondaryVariant": "#018786",
                  "shadowColor": "#222",
                  "textColor": "#000",
                  "transparent": "transparent",
                  "white": "#FFF",
                },
                "dark": false,
              }
            }
          >
            Uncontrolled Accordion
          </Text>
        </View>
        <View>
          <SvgMock
            height={24}
            name="downarrow"
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly with icon & expanded 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "expanded": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
        theme={
          Object {
            "colors": Object {
              "background": "#FFF",
              "backgroundLayout": "rgba(0, 0, 0, 0.8)",
              "black": "#000",
              "error": "#B00020",
              "greyOpac10": "rgba(53, 53, 53, 0.1)",
              "greyOpac50": "rgba(53, 53, 53, 0.5)",
              "lightgrey": "#D7D7D7",
              "linkColor": "#0000EE",
              "primary": "#FAD000",
              "primaryVariant": "#3700B3",
              "secondary": "#03DAC6",
              "secondaryVariant": "#018786",
              "shadowColor": "#222",
              "textColor": "#000",
              "transparent": "transparent",
              "white": "#FFF",
            },
            "dark": false,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "marginHorizontal": 10,
              },
              undefined,
            ]
          }
        >
          <SvgMock
            height={24}
            name="fullstar"
            width={24}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "Mulish-Bold",
                  "fontSize": 21.13142857142857,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#000",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  undefined,
                ],
              ]
            }
            theme={
              Object {
                "colors": Object {
                  "background": "#FFF",
                  "backgroundLayout": "rgba(0, 0, 0, 0.8)",
                  "black": "#000",
                  "error": "#B00020",
                  "greyOpac10": "rgba(53, 53, 53, 0.1)",
                  "greyOpac50": "rgba(53, 53, 53, 0.5)",
                  "lightgrey": "#D7D7D7",
                  "linkColor": "#0000EE",
                  "primary": "#FAD000",
                  "primaryVariant": "#3700B3",
                  "secondary": "#03DAC6",
                  "secondaryVariant": "#018786",
                  "shadowColor": "#222",
                  "textColor": "#000",
                  "transparent": "transparent",
                  "white": "#FFF",
                },
                "dark": false,
              }
            }
          >
            Uncontrolled Accordion
          </Text>
        </View>
        <View>
          <SvgMock
            height={24}
            name="uparrow"
            width={24}
          />
        </View>
      </View>
    </View>
  </View>
  <View>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Mulish-Regular",
            "fontSize": 21.13142857142857,
            "fontWeight": "normal",
          },
          Object {
            "color": "#000",
          },
          Object {
            "textAlign": "left",
          },
          undefined,
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#FFF",
            "backgroundLayout": "rgba(0, 0, 0, 0.8)",
            "black": "#000",
            "error": "#B00020",
            "greyOpac10": "rgba(53, 53, 53, 0.1)",
            "greyOpac50": "rgba(53, 53, 53, 0.5)",
            "lightgrey": "#D7D7D7",
            "linkColor": "#0000EE",
            "primary": "#FAD000",
            "primaryVariant": "#3700B3",
            "secondary": "#03DAC6",
            "secondaryVariant": "#018786",
            "shadowColor": "#222",
            "textColor": "#000",
            "transparent": "transparent",
            "white": "#FFF",
          },
          "dark": false,
        }
      }
    >
      Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
    </Text>
  </View>
</View>
`;
